// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationActions destroy dispatches with expected actions 1`] = `
Object {
  "id": Immutable.Map {
    id: 1,
    message: "message",
},
  "notification": "mockAreaID",
  "type": "DESTROY_NOTIFICATION",
}
`;

exports[`NotificationActions notify dispatches with expected actions 1`] = `
Object {
  "id": "mockAreaID",
  "notification": Object {
    "level": "success",
    "message": "message",
  },
  "type": "CREATE_NOTIFICATION",
}
`;

exports[`NotificationActions notifyError dispatches with expected actions 1`] = `
Object {
  "id": "mockAreaID",
  "notification": Object {
    "level": "negative",
    "message": "message",
  },
  "type": "CREATE_NOTIFICATION",
}
`;
